<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game_init_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/СonfigTitle"
            android:layout_width="279dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:text="@string/Config_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/StartButton"
            android:layout_width="270dp"
            android:layout_height="98dp"
            android:layout_marginBottom="36dp"
            android:onClick="onStartButton"
            android:text="@string/StartBattle_text"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/BoatCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Boat_nameExt"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/СonfigTitle" />

        <TextView
            android:id="@+id/DestroyerCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Destroyer_nameExt"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boatSeekBar" />

        <TextView
            android:id="@+id/cruiserCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Cruiser_nameExt"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destroyerSeekBar" />

        <TextView
            android:id="@+id/battleshipCountLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/BattleShip_nameExt"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cruiserSeekBar" />

        <SeekBar
            android:id="@+id/boatSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="350dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:max="6"
            android:progress="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BoatCountLabel" />

        <SeekBar
            android:id="@+id/destroyerSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="350dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:max="4"
            android:progress="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DestroyerCountLabel" />

        <SeekBar
            android:id="@+id/cruiserSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="350dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:max="3"
            android:progress="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cruiserCountLabel" />

        <SeekBar
            android:id="@+id/battleshipSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:max="2"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/battleshipCountLabel2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>